<resources>
    <string name="app_name">LoLMate</string>
    <string name="summoner_id">Summoner id</string>
    <string name="login">SIGN IN</string>
    <string name="summoner">Summoner Name</string>
    <string name="sign_in">SIGN IN</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="rechercher">Rechercher</string>
    <string name="menu_principal">Menu Principal</string>
    <string name="statistiques">Statistiques</string>
    <string name="contact">Contact</string>
    <string name="apropos">A Propos</string>

    <string name="title_activity_details_match">DetailsMatchActivity</string>
    <string name="vainqueur">Vainqueurs</string>
    <string name="perdant">Perdants</string>
    <string name="title_activity_champions">ChampionsActivity</string>
    <string name="champions">Champions</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>