<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/menu_login"
            android:checked="false"
            android:icon="@drawable/icon_recents"
            android:title="@string/menu_principal" />

        <item
            android:id="@+id/menu_recent_matches"
            android:checked="true"
            android:icon="@drawable/recent_matches"
            android:title="@string/rechercher" />

        <item
            android:id="@+id/champions"
            android:checked="false"
            android:icon="@drawable/champions"
            android:title="@string/champions" />

    </group>


</menu>