<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_black"
    android:orientation="vertical"
    tools:context="com.isbsoft.lolmate.ui.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/lol_logo_transparent" />

    <TextView
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/sign_in"
        android:textColor="#f0e6d2"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/summoner"
        android:textColor="#a09b8c"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/activity_login_edtSummonerId"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_edttext"
        android:singleLine="true"
        android:textColor="#f0e6d2"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/activity_login_btnLogin"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_btn"
        android:text="@string/login"
        android:textColor="#cdfafa"
        android:textSize="18sp" />
    <!-- <ProgressBar
        android:id="@+id/activity_login_pbLogin"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"/> -->
</LinearLayout>
